--- a/index.html
+++ b/index.html
@@ -51,25 +51,22 @@
     
     <h2>Holocaust-Gedenkstätte Auschwitz</h2>
     <div class="bild-container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Arbeit_macht_frei_sign_O%C5%9Bwi%C4%99cim.JPG" 
-             alt="Arbeit macht frei Tor Auschwitz" 
-             onclick="openLink('https://commons.wikimedia.org/wiki/File:Arbeit_macht_frei_sign_O%C5%9Bwi%C4%99cim.JPG')">
-        <p class="quelle">Quelle: Wikimedia Commons (Public Domain)</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Arbeit_macht_frei_KZ_Auschwitz.jpg" 
+             alt="Arbeit macht frei Tor Auschwitz">
+        <p class="quelle">Quelle: Wikimedia Commons (CC BY-SA 3.0)</p>
     </div>
 
     <h2>Stolpersteine – Erinnerung an die Opfer</h2>
     <div class="bild-container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Stolperstein_K%C3%B6ln.jpg" 
-             alt="Stolpersteine in Köln" 
-             onclick="openLink('https://commons.wikimedia.org/wiki/File:Stolperstein_K%C3%B6ln.jpg')">
-        <p class="quelle">Quelle: Wikimedia Commons (CC BY-SA 3.0)</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Stolperstein_Sigmund_Freud.jpg" 
+             alt="Stolpersteine in Gedenken an Sigmund Freud">
+        <p class="quelle">Quelle: Wikimedia Commons (CC BY-SA 4.0)</p>
     </div>
 
     <h2>KZ-Gedenkstätte Dachau</h2>
     <div class="bild-container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/KZ-Gedenkst%C3%A4tte_Dachau_-_Jourhaus.jpg" 
-             alt="KZ-Gedenkstätte Dachau" 
-             onclick="openLink('https://commons.wikimedia.org/wiki/File:KZ-Gedenkst%C3%A4tte_Dachau_-_Jourhaus.jpg')">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/KZ-Gedenkst%C3%A4tte_Dachau_Einfahrtstor.jpg" 
+             alt="Eingangstor der KZ-Gedenkstätte Dachau">
         <p class="quelle">Quelle: Wikimedia Commons (CC BY-SA 4.0)</p>
     </div>
 
