--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 <p><strong>„Nie wieder“ ist eine Verantwortung, die wir alle tragen.</strong></p>
 <h2>Holocaust-Gedenkstätte Auschwitz</h2>
 <div class="bild-container">
-<img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD..."
+<img src="
+
+[[File:Eingangstor des KZ Auschwitz, Arbeit macht frei (2007).jpg|Eingangstor_des_KZ_Auschwitz,_Arbeit_macht_frei_(2007)]]"
             alt="Arbeit macht frei Tor Auschwitz">
 <p class="quelle">Quelle: Wikimedia Commons</p>
 </div>
@@ -58,7 +60,7 @@
 </div>
 <h2>KZ-Gedenkstätte Dachau</h2>
 <div class="bild-container">
-<img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD..."
+<img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Dachau_KZ-Gedenkst%C3%A4tte_-_Haupttor.jpg"
             alt="Eingangstor der KZ-Gedenkstätte Dachau">
 <p class="quelle">Quelle: Wikimedia Commons</p>
 </div>
