--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 <p><strong>„Nie wieder“ ist eine Verantwortung, die wir alle tragen.</strong></p>
 <h2>Holocaust-Gedenkstätte Auschwitz</h2>
 <div class="bild-container">
-<img src="
-
-[[File:Eingangstor des KZ Auschwitz, Arbeit macht frei (2007).jpg|Eingangstor_des_KZ_Auschwitz,_Arbeit_macht_frei_(2007)]]"
+<img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Eingangstor_des_KZ_Auschwitz%2C_Arbeit_macht_frei_%282007%29.jpg"
             alt="Arbeit macht frei Tor Auschwitz">
 <p class="quelle">Quelle: Wikimedia Commons</p>
 </div>
