--- a/index.html
+++ b/index.html
@@ -5,36 +5,36 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Rassismus im Nationalsozialismus</title>
 <style>
-       body {
-           font-family: Arial, sans-serif;
-           line-height: 1.6;
-           max-width: 800px;
-           margin: 20px auto;
-           padding: 20px;
-           background-color: #f4f4f4;
-       }
-       h1, h2 {
-           color: #333;
-       }
-       .bild-container {
-           margin: 20px 0;
-           text-align: center;
-       }
-       img {
-           width: 100%;
-           max-width: 600px;
-           cursor: pointer;
-           border-radius: 8px;
-           box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-           transition: transform 0.2s;
-       }
-       img:hover {
-           transform: scale(1.05);
-       }
-       .quelle {
-           font-size: 14px;
-           color: #666;
-       }
+     body {
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 20px;
+        background-color: #f4f4f4;
+     }
+     h1, h2 {
+        color: #333;
+     }
+     .bild-container {
+        margin: 20px 0;
+        text-align: center;
+     }
+     img {
+        width: 100%;
+        max-width: 600px;
+        cursor: pointer;
+        border-radius: 8px;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s;
+     }
+     img:hover {
+        transform: scale(1.05);
+     }
+     .quelle {
+        font-size: 14px;
+        color: #666;
+     }
 </style>
 </head>
 <body>
@@ -46,26 +46,32 @@
 <p><strong>„Nie wieder“ ist eine Verantwortung, die wir alle tragen.</strong></p>
 <h2>Holocaust-Gedenkstätte Auschwitz</h2>
 <div class="bild-container">
-<img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Eingangstor_des_KZ_Auschwitz%2C_Arbeit_macht_frei_%282007%29.jpg"
-            alt="Arbeit macht frei Tor Auschwitz">
+<a href="https://upload.wikimedia.org/wikipedia/commons/3/31/Auschwitz_entrance.jpg" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Auschwitz_entrance.jpg"
+             alt="Arbeit macht frei Tor Auschwitz">
+</a>
 <p class="quelle">Quelle: Wikimedia Commons</p>
 </div>
 <h2>Stolpersteine – Erinnerung an die Opfer</h2>
 <div class="bild-container">
-<img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD..."
-            alt="Stolpersteine in Gedenken an Sigmund Freud">
+<a href="https://upload.wikimedia.org/wikipedia/commons/9/9e/Stolperstein_in_Stuttgart.jpg" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Stolperstein_in_Stuttgart.jpg"
+             alt="Stolpersteine in Gedenken an Sigmund Freud">
+</a>
 <p class="quelle">Quelle: Wikimedia Commons</p>
 </div>
 <h2>KZ-Gedenkstätte Dachau</h2>
 <div class="bild-container">
-<img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Dachau_KZ-Gedenkst%C3%A4tte_-_Haupttor.jpg"
-            alt="Eingangstor der KZ-Gedenkstätte Dachau">
+<a href="https://upload.wikimedia.org/wikipedia/commons/e/e0/Dachau_KZ-Gedenkstätte_-_Haupttor.JPG" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Dachau_KZ-Gedenkstätte_-_Haupttor.JPG"
+             alt="Eingangstor der KZ-Gedenkstätte Dachau">
+</a>
 <p class="quelle">Quelle: Wikimedia Commons</p>
 </div>
 <script>
-       function openLink(url) {
-           window.open(url, '_blank');
-       }
+     function openLink(url) {
+        window.open(url, '_blank');
+     }
 </script>
 </body>
 </html>
