--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Rassismus im Nationalsozialismus</title>
+<title>Die Geschichte des Nationalsozialismus</title>
 <style>
      body {
         font-family: Arial, sans-serif;
@@ -38,36 +38,69 @@
 </style>
 </head>
 <body>
-<h1>Rassismus im Nationalsozialismus</h1>
-<p>Rassismus hat die Geschichte der Menschheit tief geprägt. Besonders drastisch zeigte sich dies während der Zeit des Nationalsozialismus (1933–1945). Die nationalsozialistische Ideologie basierte auf einer rassistischen Weltanschauung, die Menschen nach vermeintlichen biologischen und ethnischen Kriterien bewertete.</p>
-<p>Unter Adolf Hitler propagierte das NS-Regime die Vorstellung einer „arischen Herrenrasse“ und diskriminierte, verfolgte und ermordete Millionen von Menschen. Besonders betroffen waren jüdische Menschen, Sinti und Roma, Schwarze Menschen, Slaw*innen sowie politische Gegner*innen und Menschen mit Behinderungen. Die systematische Ermordung von sechs Millionen Jüdinnen und Juden im Holocaust stellt eines der größten Verbrechen der Menschheitsgeschichte dar.</p>
-<p>Die Nürnberger Gesetze von 1935 entzogen jüdischen Menschen grundlegende Rechte und bereiteten den Weg für ihre Verfolgung. Mit der Reichspogromnacht 1938 eskalierte die Gewalt, bevor der Völkermord in den Konzentrations- und Vernichtungslagern seinen grausamen Höhepunkt erreichte.</p>
-<p>Auch nach dem Ende des Zweiten Weltkriegs hinterließ die rassistische Ideologie Spuren in Gesellschaft und Denken. Heute ist es wichtiger denn je, sich mit dieser Vergangenheit auseinanderzusetzen, um Rassismus in jeder Form entgegenzutreten. Erinnerungskultur, Aufklärung und Engagement für Gleichberechtigung sind zentrale Mittel, um sicherzustellen, dass sich Geschichte nicht wiederholt.</p>
-<p><strong>„Nie wieder“ ist eine Verantwortung, die wir alle tragen.</strong></p>
+<h1>Die Geschichte des Nationalsozialismus</h1>
+<p>Der Nationalsozialismus war eine politische Ideologie und Bewegung, die von der NSDAP unter der Führung Adolf Hitlers in Deutschland zwischen 1933 und 1945 umgesetzt wurde. Die Auswirkungen dieser Ideologie sind verheerend und prägen die Geschichte des 20. Jahrhunderts. Der Nationalsozialismus strebte eine rassistische, autoritäre Gesellschaftsordnung an und führte zu den schlimmsten Verbrechen gegen die Menschlichkeit, die die Welt je gesehen hat.</p>
+
+<h2>Aufstieg der NSDAP</h2>
+<p>Der Nationalsozialismus begann mit der Gründung der Nationalsozialistischen Deutschen Arbeiterpartei (NSDAP) im Jahr 1920. Die NSDAP wurde schnell von Adolf Hitler übernommen, der sich als charismatischer Führer präsentierte. Die Partei fand Unterstützung durch die sozialen und wirtschaftlichen Unruhen nach dem Ersten Weltkrieg, darunter die Auswirkungen des Versailler Vertrages und die Weltwirtschaftskrise. Hitler versprach, das Land zu erneuern, die „Ehre“ Deutschlands wiederherzustellen und die Arbeitslosigkeit zu bekämpfen.</p>
+<p>1933 gelang es der NSDAP, die politische Macht zu übernehmen. Hitler wurde zum Reichskanzler ernannt, und wenig später begann die NSDAP, die Demokratie in Deutschland abzuschaffen und die Grundlagen einer Diktatur zu errichten.</p>
+
+<h2>Rassismus und Antisemitismus</h2>
+<p>Ein zentrales Merkmal des Nationalsozialismus war der radikale Rassismus, insbesondere der Antisemitismus. In den Ideologien der Nazis galten die Juden als die Hauptfeinde des „arischen Volkes“. Dies führte zu einer systematischen Verfolgung, die mit der sogenannten „Reichspogromnacht“ 1938 ihren Höhepunkt erreichte, als jüdische Geschäfte, Synagogen und Wohnungen zerstört wurden.</p>
+<p>Die antijüdische Politik der Nazis mündete schließlich in der systematischen Vernichtung der jüdischen Bevölkerung in Europa, was als Holocaust bekannt wurde. Millionen von Juden, Sinti und Roma, Homosexuelle, politische Gegner und Menschen mit Behinderungen wurden in Konzentrationslagern wie Auschwitz ermordet.</p>
+
+<h2>Der Zweite Weltkrieg</h2>
+<p>Der Nationalsozialismus führte Deutschland 1939 in den Zweiten Weltkrieg. Ziel war es, ein Großdeutschland zu schaffen, das ganz Europa dominieren sollte. Der Krieg brachte massive Zerstörung, Millionen Tote und weitreichende menschliche Tragödien. Durch die Besetzung großer Teile Europas verübten die Nazis unvorstellbare Verbrechen.</p>
+<p>Die Kriegsverbrechen, die in den Konzentrationslagern, vor allem Auschwitz und Dachau, begangen wurden, sind bis heute ein Mahnmal für den absoluten Terror des Nationalsozialismus.</p>
+
+<h2>Widerstand und Niederlage</h2>
+<p>Der Widerstand gegen das Nazi-Regime war vielfältig, jedoch zersplittert und aufgrund der brutalen Repressionen wenig erfolgreich. Es gab jedoch Einzelpersonen und Gruppen, die sich dem Regime widersetzten, darunter die „Weiße Rose“ und die „Rote Kapelle“. Trotz dieses Widerstands konnte die NSDAP ihre Herrschaft bis zum Ende des Zweiten Weltkriegs im Jahr 1945 aufrechterhalten.</p>
+<p>Im Mai 1945 kapitulierte Nazi-Deutschland. Die Alliierten befreiten die Konzentrationslager und begannen mit der Entnazifizierung des Landes.</p>
+
+<h2>Die Erinnerung an den Nationalsozialismus</h2>
+<p>Die Erinnerung an die Verbrechen des Nationalsozialismus ist auch heute noch ein wichtiger Bestandteil der deutschen Kultur und Geschichte. Orte wie Auschwitz und Dachau sind heute Gedenkstätten, die an die Opfer des Regimes erinnern. In vielen Städten, darunter Köln, gibt es Stolpersteine, die an die Menschen erinnern, die während des Nationalsozialismus verfolgt wurden.</p>
+<p>Die Verbrechen des Nationalsozialismus mahnen uns, die Lehren aus der Geschichte zu ziehen und für eine Zukunft einzutreten, die auf Demokratie, Menschenrechten und Toleranz basiert.</p>
+
 <h2>Holocaust-Gedenkstätte Auschwitz</h2>
 <div class="bild-container">
+<!-- Bild von Auschwitz einfügen -->
 <a href="https://upload.wikimedia.org/wikipedia/commons/3/31/Auschwitz_entrance.jpg" target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Auschwitz_entrance.jpg"
              alt="Arbeit macht frei Tor Auschwitz">
 </a>
 <p class="quelle">Quelle: Wikimedia Commons</p>
 </div>
+
 <h2>Stolpersteine – Erinnerung an die Opfer</h2>
 <div class="bild-container">
+<!-- Bild von Stolpersteinen einfügen -->
 <a href="https://upload.wikimedia.org/wikipedia/commons/9/9e/Stolperstein_in_Stuttgart.jpg" target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Stolperstein_in_Stuttgart.jpg"
              alt="Stolpersteine in Gedenken an Sigmund Freud">
 </a>
 <p class="quelle">Quelle: Wikimedia Commons</p>
 </div>
+
 <h2>KZ-Gedenkstätte Dachau</h2>
 <div class="bild-container">
+<!-- Bild von Dachau einfügen -->
 <a href="https://upload.wikimedia.org/wikipedia/commons/e/e0/Dachau_KZ-Gedenkstätte_-_Haupttor.JPG" target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Dachau_KZ-Gedenkstätte_-_Haupttor.JPG"
              alt="Eingangstor der KZ-Gedenkstätte Dachau">
 </a>
 <p class="quelle">Quelle: Wikimedia Commons</p>
 </div>
+
+<!-- Optional: Weitere Bilder hinzufügen -->
+<h2>Weitere Bilder</h2>
+<div class="bild-container">
+<!-- Beispiel für ein weiteres Bild -->
+<a href="URL-ZUM-BILD" target="_blank">
+<img src="URL-ZUM-BILD" alt="Zusätzliches Bild">
+</a>
+<p class="quelle">Quelle: Angabe der Quelle</p>
+</div>
+
 <script>
      function openLink(url) {
         window.open(url, '_blank');
