--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <h2>Holocaust-Gedenkstätte Auschwitz</h2>
 <div class="bild-container">
 <!-- Bild von Auschwitz einfügen -->
-<a href="https://upload.wikimedia.org/wikipedia/commons/3/31/Auschwitz_entrance.jpg" target="_blank">
-<img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Auschwitz_entrance.jpg"
+<a href="https://upload.wikimedia.org/wikipedia/commons/1/13/Selection_on_the_ramp_at_Auschwitz-Birkenau%2C_1944_%28Auschwitz_Album%29_1b.jpg" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Selection_on_the_ramp_at_Auschwitz-Birkenau%2C_1944_%28Auschwitz_Album%29_1b.jpg"
              alt="Arbeit macht frei Tor Auschwitz">
 </a>
 <p class="quelle">Quelle: Wikimedia Commons</p>
