--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <h2>Stolpersteine – Erinnerung an die Opfer</h2>
 <div class="bild-container">
 <!-- Bild von Stolpersteinen einfügen -->
-<a href="https://upload.wikimedia.org/wikipedia/commons/9/9e/Stolperstein_in_Stuttgart.jpg" target="_blank">
-<img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Stolperstein_in_Stuttgart.jpg"
+<a https://upload.wikimedia.org/wikipedia/commons/0/00/Stolpersteine_f%C3%BCr_Unger%2C_Gumpert%2C_Sch%C3%B6nenberg%2C_Hanauer%2C_Venloer_Stra%C3%9Fe_23%2C_K%C3%B6ln-5218.jpg" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/0/00/Stolpersteine_f%C3%BCr_Unger%2C_Gumpert%2C_Sch%C3%B6nenberg%2C_Hanauer%2C_Venloer_Stra%C3%9Fe_23%2C_K%C3%B6ln-5218.jpg"
              alt="Stolpersteine in Gedenken an Sigmund Freud">
 </a>
 <p class="quelle">Quelle: Wikimedia Commons</p>
