--- a/index.html
+++ b/index.html
@@ -94,9 +94,31 @@
 <!-- Optional: Weitere Bilder hinzufügen -->
 <h2>Weitere Bilder</h2>
 <div class="bild-container">
+     <h2>Tor von Auschwitz</h2>
 <!-- Beispiel für ein weiteres Bild -->
-<a href="URL-ZUM-BILD" target="_blank">
-<img src="URL-ZUM-BILD" alt="Zusätzliches Bild">
+<a href="https://upload.wikimedia.org/wikipedia/commons/5/52/Auschwitz_I_%2822_May_2010%29.jpg" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Auschwitz_I_%2822_May_2010%29.jpg" alt="Zusätzliches Bild">
+</a>
+<p class="quelle">Quelle: Wikimedia Commons</p>
+</div>
+<div class="bild-container">
+     <h2>Arbeit macht frei</h2>
+     <a href="https://upload.wikimedia.org/wikipedia/commons/8/86/Arbeit_Mach_Frei_gate_Auschwitz_2012.jpg" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/8/86/Arbeit_Mach_Frei_gate_Auschwitz_2012.jpg" alt="Zusätzliches Bild">
+</a>
+<p class="quelle">Quelle: Wikimedia Commons</p>
+</div>
+<div class="bild-container">
+     <h2>Krematorium Auschwitz (Leichenöfen)</h2>
+     <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Crematorium_at_Auschwitz_I_2012.jpg" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Crematorium_at_Auschwitz_I_2012.jpg" alt="Zusätzliches Bild">
+</a>
+<p class="quelle">Quelle: Wikimedia Commons</p>
+</div>
+<div class="bild-container">
+     <h2>KZ-Gedenkstätte Dachau</h2>
+     <a href="https://upload.wikimedia.org/wikipedia/commons/2/2f/06.06.2010._Dachau_-_KZ_Gedenkst%C3%A4tte_-_panoramio_%282%29.jpg" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/06.06.2010._Dachau_-_KZ_Gedenkst%C3%A4tte_-_panoramio_%282%29.jpg" alt="Zusätzliches Bild">
 </a>
 <p class="quelle">Quelle: Angabe der Quelle</p>
 </div>
