--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
 <p class="quelle">Quelle: Angabe der Quelle</p>
 </div>
 
+<h4>© Alle Rechte vorbehalten</h4>
+
+     <a href="LICENSE">Lizens</a>
+     <a href="README.md">README</a>
+     <a href="SECURITY.md">Security</a>
+     
 <script>
      function openLink(url) {
         window.open(url, '_blank');
