--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <h4>© Alle Rechte vorbehalten</h4>
 
-     <a href="LICENSE">Lizens</a>
+     <a href="LICENSE.md">Lizenz</a>
      <a href="README.md">README</a>
      <a href="SECURITY.md">Security</a>
      
