--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Die Geschichte des Nationalsozialismus</title>
-     <link rel="icon" href="data:img/9j/iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAAAXNSR0IArs4c6QAAAERlWElmTU0A
+     <link rel="icon" href="data:image/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAAAXNSR0IArs4c6QAAAERlWElmTU0A
 KgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAA6ABAAMAAAABAAEAAKACAAQAAAABAAAB9KADAAQAAAAB
 AAAB9AAAAAB3bs6AAABAAElEQVR4Aey9B7xlVXn+P/dOgWEYepUuiILYkCY2UFCjqKHYUWlRsMUS
 TTQog7EhYhfRRAFjL7EkKjYYKxZELKjUGYoUQUA6DDP3/3zfu58971l37X3uHfDvz+Tsz+ec911v
