--- a/index.html
+++ b/index.html
@@ -2434,7 +2434,7 @@ N23nWiPxdv/b7n9r7CbfNMq3cv/7/wFzHjAs1RdLjAAAAABJRU5ErkJggg==
      <a href="https://upload.wikimedia.org/wikipedia/commons/2/2f/06.06.2010._Dachau_-_KZ_Gedenkst%C3%A4tte_-_panoramio_%282%29.jpg" target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/06.06.2010._Dachau_-_KZ_Gedenkst%C3%A4tte_-_panoramio_%282%29.jpg" alt="Zusätzliches Bild">
 </a>
-<p class="quelle">Quelle: Angabe der Quelle</p>
+<p class="quelle">Quelle: Wikimeadia Commons</p>
 </div>
 
 <h4>© Alle Rechte vorbehalten</h4>
