--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
      <a href="LICENSE.md">Lizenz</a>
      <a href="README.md">README</a>
      <a href="SECURITY.md">Security</a>
+     <a href="v2.html">V2</a>
      
 <script>
      function openLink(url) {
