--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
      <a href="README.md">README</a>
      <a href="SECURITY.md">Security</a>
      <a href="v2.html">V2</a>
+     <a href="aggertal-gymnasium.de">Sponsor</a>
      
 <script>
      function openLink(url) {
