--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </style>
 </head>
 <body>
-     <a href="whatsapp://send?text=Ich%20habe%20einen%20interessanten%20Blog%20f%C3%BCr%20dich%20entdeckt%3A%20http%3A%2F%2Flokrogaming.github.io/rassismus">Per WhatsApp empfehlen</a>
+     <a href="https://wa.me/whatsappphonenumber/?text=Ich%20habe%20einen%20guten%20Artikel%20zum%20Nationalsozialismus%20gefunden!%20https://lokrogaming.github.io/rassismus">Per WhatsApp empfehlen</a>
 <h1>Die Geschichte des Nationalsozialismus</h1>
 <p>Der Nationalsozialismus war eine politische Ideologie und Bewegung, die von der NSDAP unter der Führung Adolf Hitlers in Deutschland zwischen 1933 und 1945 umgesetzt wurde. Die Auswirkungen dieser Ideologie sind verheerend und prägen die Geschichte des 20. Jahrhunderts. Der Nationalsozialismus strebte eine rassistische, autoritäre Gesellschaftsordnung an und führte zu den schlimmsten Verbrechen gegen die Menschlichkeit, die die Welt je gesehen hat.</p>
 
