--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         font-size: 14px;
         color: #666;
      }
+     button {
+          background: Green;
+     }
 </style>
 </head>
 <body>
