--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
         color: #666;
      }
      button {
-          background: Green;
+          background-color: transparent;
+            border: 2px solid #1DB954; /* Spotify Grün */
+            border-radius: 12px; /* Abgerundete Ecken */
+            color: #A0A0A0; /* Graue Schriftfarbe für "SPOTIFY PLAYER" */
+            font-size: 18px;
+            padding: 15px 30px;
+            margin: 10px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .button:hover {
+            background-color: rgba(29, 185, 84, 0.1); 
      }
 </style>
 </head>
