--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         color: #666;
      }
      button {
-          background-color: transparent;
+          background-color: green;
             border: 2px solid #1DB954; /* Spotify Grün */
             border-radius: 12px; /* Abgerundete Ecken */
             color: #A0A0A0; /* Graue Schriftfarbe für "SPOTIFY PLAYER" */
