--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         window.open(url, '_blank');
      }
      function whatsappshare() {
-          window.open("https://wa.me/?text=Ich%20habe%20einen%20guten%20Artikel%20zum%20Nationalsozialismus%20gefunden!%20https://lokrogaming.github.io/rassismus", '_blank'}
+          window.open("https://wa.me/?text=Ich%20habe%20einen%20guten%20Artikel%20zum%20Nationalsozialismus%20gefunden!%20https://lokrogaming.github.io/rassismus", '_blank')
      }
 </script>
 </body>
