--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </style>
 </head>
 <body>
-     <p>Von</p><a href="lokrogaming.github.io/about.html">Erik Demoulin</a>
+     <p>Von</p><button class="button" style="background-color:yellow" onclick="window.location.href='lokrogaming.github.io/about.html'">Erik Demoulin</button>
      <button class="button" onclick="whatsappshare()">Per WhatsApp empfehlen</button>
      <button class="button" onclick="whatsappfeedback()">Feedback an den Ersteller</button>
      <p class="quelle">Quelle: Wikipedia</p>
