--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
      }
      button {
           background-color: green;
-            border: 2px solid #1DB954; /* Spotify Grün */
-            border-radius: 12px; /* Abgerundete Ecken */
-            color: #A0A0A0; /* Graue Schriftfarbe für "SPOTIFY PLAYER" */
+            border: 2px solid #1DB954; 
+            border-radius: 12px;
+            color: #A0A0A0; 
             font-size: 18px;
             padding: 15px 30px;
             margin: 10px;
@@ -54,7 +54,8 @@
 </style>
 </head>
 <body>
-     <p>Von</p><button class="button" style="background-color:yellow" onclick="window.location.href='lokrogaming.github.io/about.html'">Erik Demoulin</button>
+     <p>Von</p><button class="button" style="background-color:yellow" onclick="window.location.href='https://lokrogaming.github.io/about.html'">Erik Demoulin</button>
+
      <button class="button" onclick="whatsappshare()">Per WhatsApp empfehlen</button>
      <button class="button" onclick="whatsappfeedback()">Feedback an den Ersteller</button>
      <p class="quelle">Quelle: Wikipedia</p>
