--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Die Geschichte des Nationalsozialismus</title>
 <style>
+     html {
+          scoll-destination: smooth;
+     }
      body {
         font-family: Arial, sans-serif;
         line-height: 1.6;
