--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Die Geschichte des Nationalsozialismus</title>
 <style>
      html {
-          scoll-destination: smooth;
+          scoll-behavior: smooth;
      }
      body {
         font-family: Arial, sans-serif;
