--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            top: 10px;
+            left: 100%;
         }
         .button:hover {
             background-color: rgba(29, 185, 84, 0.1); 
