--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   right: 20px;
   font-size: 1.2rem;
   font-weight: bold;
-  color: white;
+  color: blue;
   background-color: red;
   padding: 0.8rem 1.2rem;
   border-radius: 10px;
