--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Die Geschichte des Nationalsozialismus</title>
 <style>
      html {
-          scoll-behavior: smooth;
+        scroll-behavior: smooth;
      }
      body {
         font-family: Arial, sans-serif;
@@ -112,7 +112,7 @@
 </head>
 <body>
      <div id="pochen-banner" class="pochen-banner" style="display: none;">
-  8. Mai: Ende des Zweiten Weltkrieges!
+  <h1>8. Mai: Tag der Befreiung (1945)</h1>
 </div>
 
      <p>Von</p><button class="button" style="background-color:yellow" onclick="window.location.href='https://lokrogaming.github.io/about.html'">Erik Demoulin</button>
