--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         .button:hover {
             background-color: rgba(29, 185, 84, 0.1); 
      }
+     .overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
      #overlay {
   position: fixed; /* Sit on top of the page content */
   display: none; /* Hidden by default */
@@ -117,7 +123,7 @@
 
      <p>Von</p><button class="button" style="background-color:yellow" onclick="window.location.href='https://lokrogaming.github.io/about.html'">Erik Demoulin</button>
    <div id="overlay">
-        <button class="close" onclick="off()">Schließen</button>
+        <a href="javascript:void(0)" class="closebtn" onclick="off()">&times;</a>
      <!-- Elfsight Poll | Untitled Poll -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
 <div class="elfsight-app-5a0268a6-e359-46b5-b1fc-ba9bb7f9db44" data-elfsight-app-lazy></div><br><br>
