--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             justify-content: center;
         }
     #overlay button.close {
+         background-color: transparent;
+         border: none;
+         
             color: #A0A0A0; 
             font-size: 18px;
             padding: 15px 30px;
