--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
          border: none;
          
             color: #A0A0A0; 
-            font-size: 300px;
-            padding: 15px 30px;
+            font-size: 150px;
+            padding: 30px;
             margin: 10px;
             cursor: pointer;
             display: flex;
