--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
          border: none;
          
             color: #A0A0A0; 
-            font-size: 150px;
+            font-size: 100px;
             padding: 30px;
             margin: 10px;
             cursor: pointer;
@@ -64,7 +64,7 @@
             align-items: center;
             justify-content: center;
             top: 10px;
-            left: 100%;
+            right: 100%;
         }
         .button:hover {
             background-color: rgba(29, 185, 84, 0.1); 
